--- a/linux/md/regular-expression/正则表达式.md
+++ b/linux/md/regular-expression/正则表达式.md
@@ -7,9 +7,9 @@
 | ^    | 匹配输入字符串的开始位置，如果在方括号中使用，代表不接受该方括号表达式中的字符集合。 |
 | $    | 匹配输入字符串的结尾位置                                     |
 | .    | 匹配除换行符 \n 之外的任何单字符                             |
-| +    | 匹配前面的子表达式一次或多次                                 |
+| +    | 匹配前面的子表达式一次或多次；需要扩展正则，即 grep -E 或者 egrep |
 | *    | 匹配前面的子表达式零次或多次                                 |
-| ?    | 匹配前面的子表达式零次或一次，或指明一个非贪婪限定符         |
+| ?    | 匹配前面的子表达式零次或一次，或指明一个非贪婪限定符；需要扩展正则，即 grep -E 或者 egrep |
 | \|   | 指明两项之间的一个选择                                       |
 | {    | 标记限定符表达式的开始                                       |
 | [    | 标记一个中括号表达式的开始                                   |
@@ -44,7 +44,7 @@ abc123
 AbC
 ```
 
-#### 2.场景演练
+#### 2.场景演练-正则表达式
 
 > --color  参数是为了查看符合正则表达式的字符，便于演示用，下同。
 
@@ -122,10 +122,13 @@ cat c.txt | grep -n '^$' #  -n 是为了显示行号
 >
 > ====> 以结尾符号开头的行  ==> 空行
 
-##### 9.至少出现1次
+#### 3.扩展正则表达式
+
+1. 当需要匹配 + 或者 ? 的正则表达式含义时，需要使用扩展表达式；
+2. 对于grep，使用扩展正则表达式的方式有两种： `grep -E` 或者 `egrep`；
 
 ```bash
-cat c.txt| grep -E '1[2|1]+3'   # 
+cat c.txt| grep -E '1[2|1]+3'   # 或者使用 cat c.txt| grep -E '1[1|2]+3' --color 
 ======> 匹配结果：
 113
 1223
@@ -140,9 +143,32 @@ abc123
 > - 含有数字1
 > - 数字1后面，跟着数字1或者数字2，并且至少出现一次；11，12，122都符合
 > - [2|1]+ 匹配完毕后，是数字3 
-> - 需要添加 -E 参数，用于匹配正则。否则不生效。
+> - -E 指的是 使用扩展正则表达式来构建模式。
 
+#### 4.忽略正则表达式(查找含有数字1.3的行)
 
+有些场景下，不需要使用正则表达式，可以使用 `grep -F` 或者 `fgrep`
+
+示例一：
+
+```bash
+cat c.txt | grep '1.3' --color   # 默认会当成正则表达式处理，即.代表任意一个字符
+======> 执行结果：
+113
+1.3
+abc123
+123abc
+```
+
+示例二：
+
+```bash
+cat c.txt | grep -F '1.3' --color   # 添加-F参数，则忽略正则表达式
+=======> 执行结果：
+1.3
+```
+
+> -F 指的是忽略正则表达式，完全匹配后面的字符。示例中的. 就纯粹的代表字符 . 
 
 
 
